--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,6 +20,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Lint code
+        run: echo "Linting repository!"
+
+      - name: Run unit tests
+        run: |
+          echo "Running unit tests"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
