--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,11 +22,10 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Lint code
-        run: echo "Linting repository!"
-
+        run: npm run lint
+    
       - name: Run unit tests
-        run: |
-          echo "Running unit tests"
+        run: npm test
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
