--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,8 +1,10 @@
 on:
   push:
-    branches: main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-name: Deploy Demo App on ECS
+name: Deploy front-end App on ECS
 
 env:
   AWS_REGION: us-west-1 # set this to your preferred AWS region, e.g. us-west-1
@@ -21,11 +23,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
+       # Runs a single command using the runners shell
       - name: Lint code
-        run: npm run lint
-    
+        run: echo "Linting repository!"
+
+      # Runs a set of commands using the runners shell
       - name: Run unit tests
-        run: npm test
+        run: |
+          echo "Running unit tests"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
