--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,10 +27,9 @@ jobs:
       - name: Lint code
         run: echo "Linting repository!"
 
-      # Runs a set of commands using the runners shell
       - name: Run unit tests
-        run: |
-          echo "Running unit tests"
+        run: npm test
+
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
